--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,9 +16,15 @@ android {
         versionCode 1
         versionName "1.0"
         ndk {
-            abiFilters "armeabi-v7a", "arm64-v8a"
+            abiFilters "armeabi-v7a", "arm64-v8a"  // 直接逗号分隔
         }
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        externalNativeBuild {
+            cmake {
+                arguments "-DANDROID_STL=c++_static" // ✅ 单个参数直接写字符串
+                // 如果有多个参数，可以写成:
+                // arguments "-DANDROID_STL=c++_static", "-DSOME_OTHER_FLAG=1"
+            }
+        }
     }
 
     buildTypes {
